@startuml builder

namespace builder {
    class customElementA << (S,Aquamarine) >> {
        - attributeY string
        - attributeZ int

        - setAttributeY() 
        - setAttributeZ() 
        - newComplexElement() complexElement

    }
    class customElementB << (S,Aquamarine) >> {
        - attributeY string
        - attributeZ int

        - setAttributeY() 
        - setAttributeZ() 
        - newComplexElement() complexElement

    }
    class director << (S,Aquamarine) >> {
        - builderConfiguration iBuilder

        - setBuilderConfiguration(builderConfiguration iBuilder) 
        - getComplexElement() complexElement

    }
    interface iBuilder  {
        - setAttributeY() 
        - setAttributeZ() 
        - newComplexElement() complexElement

    }
    class complexElement << (S,Aquamarine) >> {
        - attributeY string
        - attributeZ int

    }
}

"builder.director" *--> "builder.iBuilder"

/' together {
    class builder.customElementA
    class builder.customElementB
} '/
"builder.iBuilder" <|.. "builder.customElementA"
"builder.iBuilder" <|.. "builder.customElementB"

'hide builder.complexElement
"builder.iBuilder" .> "builder.complexElement"
'"builder.iBuilder" .[dotted,thickness=1]> "builder.complexElement"


@enduml
